# technopark_mail_taxi

./: .gitignore  CMakeLists.txt  README.md  makefile
Authorization/include/: AuthorizationServerImpl.h  DataBase.h  GeoIndexClientSync.h  OrderManagerClient.h  Sha1.h
Authorization/src/: AuthorizationServerImpl.cpp  DataBase.cpp  GeoIndexClientSync.cpp  OrderManagerClient.cpp  Sha1.cpp  main.cpp
CDSHelper/include/: CDSHelper.h
CashTable/include/: CashTable.h
ClientsForTests/ClientForTestGeoIndex/: main.cpp
Cone/CDSHelper/include/: CDSHelper.h
Cone/QuadTree/: CMakeLists.txt
Cone/QuadTree/include/: QuadTree.h  Quadrant.h
Cone/QuadTree/src/: Quadrant.cpp
Cone/web/: CMakeLists.txt
Cone/web/include/: Acceptor.h  Connaction.h  EventLoop.h  SingleContext.h  Web.h
Cone/web/src/: Acceptor.cpp  Connaction.cpp  EventLoop.cpp  SingleContext.cpp
Descriprion_Geo_Data/: LocationData.proto
Description_of_external_interfaces/: Driver.proto  GeoIndex.proto
DistributionOfOrders/: CMakeLists.txt
DistributionOfOrders/include/: DistributionOfOrdersService.h  FilterDrivers.h  OrderClient.h
DistributionOfOrders/src/: DistributionOfOrdersService.cpp  OrderClient.cpp  main.cpp
GeoIndex/: CMakeLists.txt
GeoIndex/include/: DriverClientConnector.h  GeoIndexer.h  ICashTable.h  IGeoIndexer.h  OrderDataStructs.h  OrderService.h  Server.h
GeoIndex/src/: DriverClientConnector.cpp  OrderService.cpp  main.cpp
GeoIndexClient/include/: GeoIndexClient.h
GeoIndexClient/src/: GeoIndexClient.cpp
GeoIndexer/include/: DriverGeoIndexer.h  GeoIndexServer.h  QuadTree.h  Quadrant.h
GeoIndexer/src/: DriverGeoIndexer.cpp  GeoIndexServer.cpp  Quadrant.cpp  main.cpp
OrderManagement/include/: ConnectionManagementCash.h  InitClientCashTable.h  InitSession.h  OrderManagementServer.h  Session.h  SessionCodes.h  SessionManager.h
OrderManagement/src/: ConnectionManagementCash.cpp  InitClientCashTable.cpp  InitSession.cpp  OrderManagementServer.cpp  Session.cpp  SessionManager.cpp  main.cpp
QuadTree/: CMakeLists.txt  main.cpp
QuadTree/include/: WorldQuadTree.h
inc/: Driver_Dispatcher.h  Map_API.h  Order_Dispatcher.h
project/: main.cpp
project/database/: DatabaseManager.cpp  DatabaseManager.h
project/include/: AuthorizationServer.h  DatabaseConnection.h  DatabaseManager.h  Handler.h  Request.h  SHA1.h  User_Authorization.h  User_Registration.h  pgbackend.h  pgconnection.h
project/src/: AuthorizationServer.cpp  DatabaseConnection.cpp  DatabaseManager.cpp  Handler.cpp  Request.cpp  SHA1.cpp  User_Authorization.cpp  User_Registration.cpp  pgbackend.cpp  pgconnection.cpp
protos/: Authorization.proto  GeoData.proto  GeoIndex.proto  OrderManagement.proto  TaxiFacilities.proto
src/: Driver_Dispatcher.cpp  Map_API.cpp  Order_Dispatcher.cpp  main.cpp
